--- a/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
+++ b/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
@@ -13,7 +13,7 @@
   </head>
   <body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
     <div  style="" class="container mt-2">
-      <h1 style="margin-top: 15px; " class="text-center mb-5">Formulario de Curso</h1>
+      <h1 style="margin-top: 15px; " class="text-center mb-5">Formulario de Silabo</h1>
       <form id="contenedorform" [formGroup]="silaboForm"  >
         <h2 class="mb-3">1. Información General del Curso</h2>
         <div class="row mb-3 ">
