--- a/src/app/modules/docente-capacitador/register-necesidad/pages/register-necesidad/register-necesidad.component.html
+++ b/src/app/modules/docente-capacitador/register-necesidad/pages/register-necesidad/register-necesidad.component.html
@@ -1,10 +1,4 @@
-<!-- ncuId?: number;
-    ncuFechaprevisfin?: Date;
-    ncuNumparticipantes?: number;
-    ncuResumenyproyecto?: string;
-    ncuPoblaciondirigida?: string;
-    ncuLugardicta?: string;
-    ncuEstado?: boolean; -->
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -12,76 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro de la  neecesidad del Curso</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   </head>
   <body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
     <div  style="" class="container mt-2">
       <h1 style="margin-top: 15px; " class="text-center mb-5">Registro de la necesidad del curso</h1>
-      <form id="contenedorform" [formGroup]="neceForm" >
+      <form id="contenedorform" [formGroup]="neceForm">
         <div class="">
           <div class="">
-            
             <h2 class="mb-3">Identiificador necesidad curso</h2>
-            <input type="text"  name="ncuNumparticipantes" class="form-control"  [(ngModel)]="necesidad.ncuIdentificador" formControlName="ncuIdentificador" />
-    
-        <h2 class="mb-3">1. Lugar donde se dictara</h2>
-        <div class="mb-3">
-        
-          <textarea
-            rows="3"
-            class="form-control"
-            formControlName="ncuLugardicta"
-            [(ngModel)]="necesidad.ncuLugardicta"
-          ></textarea>
-        </div>
-       
-        <label  class="form-label">Dias</label>
-        <select (change)="onSelectChange3($event.target)" [(ngModel)]="necesidad.dia"  class="form-select">
-          <option  formControlName="dias" [(ngModel)]="necesidad.dia" *ngFor="let clasedia of arraydias" [value]="clasedia.diaId">{{ clasedia.diaNombre }} </option>
-        </select>
-
-        <label  class="form-label">Fecha prevista de Iniciación</label>
-        <input type="date" formControlName="ncuFechaprevisfin" [(ngModel)]="necesidad.ncuFechaprevisfin" class="form-control" />
-
-     
-          
-            <label  class="form-label">Numero de Participantes a ser inscritos</label>
-        <input type="text"  name="ncuNumparticipantes" class="form-control"  [(ngModel)]="necesidad.ncuNumparticipantes" formControlName="ncuNumparticipantes" />
-
-        
-        <h2 class="mb-3">2. Resumen del curso y posible proyecto</h2>
-        <div class="mb-3">
-          <textarea    
-            rows="3"
-            class="form-control"
-            formControlName="ncuResumenyproyecto"
-            [(ngModel)]="necesidad.ncuResumenyproyecto"
-          ></textarea>
-        </div>
-
-
-        <h2 class="mb-3">3. Poblacion a quien se encuentra dirigido</h2>
-        <div class="mb-3">
-          
-          <textarea 
-            rows="3"
-            class="form-control"
-            formControlName="ncuPoblaciondirigida"
-            [(ngModel)]="necesidad.ncuPoblaciondirigida"
-          ></textarea>
-        </div>
+            <input type="text" name="ncuIdentificador" class="form-control" [(ngModel)]="necesidad.ncuIdentificador" formControlName="ncuIdentificador" />
+      
+            <h2 class="mb-3">1. Lugar donde se dictara</h2>
+            <div class="mb-3">
+              <textarea
+                rows="3"
+                class="form-control"
+                formControlName="ncuLugardicta"
+                [(ngModel)]="necesidad.ncuLugardicta"
+              ></textarea>
+            </div>
+      
+            <label class="form-label">Dias</label>
+            <select (change)="onSelectChange3($event.target)" [(ngModel)]="selectedId3.diaId" class="form-select" formControlName="dia">
+              <option *ngFor="let clasedia of arraydias" [value]="clasedia.diaId">{{ clasedia.diaNombre }}</option>
+            </select>
+            
+      
+            <label class="form-label">Fecha prevista de Iniciación</label>
+            <input type="date" formControlName="ncuFechaprevisfin" [(ngModel)]="necesidad.ncuFechaprevisfin" class="form-control" />
+      
+            <label class="form-label">Numero de Participantes a ser inscritos</label>
+            <input type="number" name="ncuNumparticipantes" class="form-control" [(ngModel)]="necesidad.ncuNumparticipantes" formControlName="ncuNumparticipantes" />
+      
+            <h2 class="mb-3">2. Resumen del curso y posible proyecto</h2>
+            <div class="mb-3">
+              <textarea
+                rows="3"
+                class="form-control"
+                formControlName="ncuResumenyproyecto"
+                [(ngModel)]="necesidad.ncuResumenyproyecto"
+              ></textarea>
+            </div>
+      
+            <h2 class="mb-3">3. Poblacion a quien se encuentra dirigido</h2>
+            <div class="mb-3">
+              <textarea
+                rows="3"
+                class="form-control"
+                formControlName="ncuPoblaciondirigida"
+                [(ngModel)]="necesidad.ncuPoblaciondirigida"
+              ></textarea>
+            </div>
           </div>
         </div>
-
+      
         <div class="mb-3">
-          <button (click)="crearcurso()" type="submit" class="btn btn-primary">Enviar</button>
+          <button (click)="crearcurso()" type="submit" class="btn btn-primary" style="margin: 7px; padding-left: 100px; padding-right: 100px;">Enviar</button>
         </div>
       </form>
-        <pre>
-                          {{necesidad |  json}}
-                       </pre> 
+        <!-- <pre>
+      {{necesidad |  json}}
+     </pre>  -->
     </div>
 
    
