--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -329,7 +329,32 @@
           </ul>
         </li>
         <!-- termino Diseñso Curricular Nav -->
-
+ <!-- Registro Fotografico Nav -->
+ <li class="nav-item">
+  <a
+    class="nav-link collapsed"
+    data-bs-target="#participantes-nav"
+    data-bs-toggle="collapse"
+    href="#"
+  >
+    <i class="bi bi-card-list"></i><span>Participantes</span
+    ><i class="bi bi-chevron-down ms-auto"></i>
+  </a>
+  <ul
+    id="participantes-nav"
+    class="nav-content collapse"
+    data-bs-parent="#sidebar-nav"
+  >
+    <li>
+      <a (click)="goToRegisterparticipante($event)">
+        <i class="bi bi-circle"></i
+        ><span>Registro Participantes</span>
+      </a>
+    </li>
+    <li></li>
+  </ul>
+</li>
+<!-- Termino Registro Fotografico Nav -->
         <!-- Registro Fotografico Nav -->
         <li class="nav-item">
           <a
