--- a/src/app/modules/participantes/gen-fincha-inscripcion/pages/gen-fincha-inscripcion/gen-fincha-inscripcion.component.html
+++ b/src/app/modules/participantes/gen-fincha-inscripcion/pages/gen-fincha-inscripcion/gen-fincha-inscripcion.component.html
@@ -1,5 +1,4 @@
-<<<<<<< Updated upstream
-=======
+<!-- 
 <div class="container">
     <div class="main-body">
         <div class="row gutters-sm">
@@ -18,8 +17,6 @@
                                     <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
                                 </svg>
                                 <p class="text-secondary mb-1">Docente</p>
-                                <!-- <p class="text-muted font-size-sm">Celular: {{persona.celular}}</p> -->
-                                <!-- <button class="btn btn-primary" (click)="mostrarDatos()">Ver</button> -->
                             </div>
                         </div>
                     </div>
@@ -50,7 +47,6 @@
                             </h6>
                             <span class="text-secondary"><time>{{persona.fecha_nacimiento| date: 'dd/MM/yyyy'}}
                                 </time></span>
-                            <!-- <time>{{persona.fecha_nacimiento| date: 'dd/MM/yyyy'}} </time> -->
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                             <h6 class="mb-0">
@@ -173,5 +169,5 @@
         </div>
 
     </div>
-</div>
->>>>>>> Stashed changes
+</div> -->
+
