--- a/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
+++ b/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
@@ -41,7 +41,7 @@
     <!-- /Breadcrumb -->
     <!-- Desde aca duplicar -->
     <div class="row">
-<<<<<<< Updated upstream
+
         <!-- //desde aqui -->
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
@@ -59,26 +59,9 @@
             </div>
         </div>
         <!-- hasata aqui -->
-        <div class="col-md-4 col-xl-3">
-=======
-      <div class="col-md-4 col-xl-3">
-          <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
-              (click)="showContainer2 = false; showContainer3 = true;">
-              <div class="card-block">
-                  <h6 class="m-b-20">Tipo de Reporte</h6>
-                  <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span
-                          style="font-size: 25px;">Informe Final del Curso</span>
-                  </h2>
-                  <div style="margin-bottom: 10px;">
-                  </div>
-                  <div style="margin-bottom: 10px;">
-                  </div>
-              </div>
-          </div>
-      </div>
     <!--hasta aca duplicar -->
       <div class="col-md-4 col-xl-3">
->>>>>>> Stashed changes
+
             <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
                 (click)="showContainer2 = false; showContainer4 = true;">
                 <div class="card-block">
@@ -109,7 +92,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4 col-xl-3">
+    <!-- <div class="col-md-4 col-xl-3">
       <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
           (click)="showContainer2 = false; showContainer3 = true;">
           <div class="card-block">
@@ -123,7 +106,7 @@
               </div>
           </div>
       </div>
-  </div>
+  </div> -->
 </div>
 
 
