--- a/src/app/modules/docente-capacitador/modalidad-curso/pages/modalidad-curso.component.html
+++ b/src/app/modules/docente-capacitador/modalidad-curso/pages/modalidad-curso.component.html
@@ -6,11 +6,11 @@
           <div class="col-md-12">
             <div class="form-group">
               <label for="mcuNombre">Nombre</label>
-              <input type="text" class="form-control" id="mcuNombre" name="mcuNombre" [(ngModel)]="modalidadSeleccionada.mcuNombre" required>
+              <input type="text" class="form-control" id="mcuNombre" name="mcuNombre" [(ngModel)]="modalidadSeleccionada.mcuNombre" (input)="convertirPrimeraLetraMayuscula()"  (keydown)="validarInputNombre()" required>
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">{{ isNew ? 'Crear' : 'Guardar' }}</button>
+        <button type="submit" class="btn btn-primary" [disabled]="todosCamposVacios">{{ isNew ? 'Crear' : 'Guardar' }}</button>
       </form>
     </div>
     <br>
