--- a/src/app/modules/docente-capacitador/register-ficha-evaluacion/pages/register-ficha-evaluacion/register-ficha-evaluacion.component.html
+++ b/src/app/modules/docente-capacitador/register-ficha-evaluacion/pages/register-ficha-evaluacion/register-ficha-evaluacion.component.html
@@ -1,177 +1,166 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario de Evaluación</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
 
-  <style>
-    .id-column,
-    .action-column {
-      white-space: nowrap;
-    }
-    .id-column {
-      width: 1%;
-    }
-    .action-column {
-      width: 1%;
-    }
-  </style>
-
-  <body>
-    <div class="container">
-      <h1 class="mt-5">Preguntas para ficha de Evaluación</h1>
-
-      <form>
-        <div class="mb-3">
-          <label for="pregunta" class="form-label">Agregar Categoría</label>
-          <input
-            [(ngModel)]="newCategory"
-            name="newCategory"
-            type="text"
-            class="form-control"
-            id="pregunta"
-            placeholder="Escribe la categoría"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary" (click)="addCategory()">
-          Añadir
-        </button>
-      </form>
-    </div>
-
-    <div class="container mt-3">
-      <h3 class="mt-5">Categorías</h3>
-      <table class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">Categoría</th>
-            <th scope="col" class="action-column">Acción</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let category of categories; index as i">
-            <td>{{ category.name }}</td>
-            <td class="action-column">
-              <div class="d-flex">
-                <button
-                  type="button"
-                  class="btn btn-primary me-2"
-                  data-bs-toggle="modal"
-                  data-bs-target="#addQuestionModal"
-                  (click)="addQuestion(category.name)"
-                >
-                  Agregar preguntas
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-danger"
-                  (click)="deleteCategory(i, category.name)"
-                >
-                  Quitar
-                </button>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="container mt-3">
-      <h3 class="mt-5">Preguntas por Categorías</h3>
-      <table class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th scope="col" class="id-column">id_pregunta</th>
-            <th scope="col">Categoría</th>
-            <th scope="col">Pregunta</th>
-            <th scope="col" class="action-column">Acción</th>
-          </tr>
-        </thead>
-        <tbody>
-          <ng-container *ngFor="let category of categories; index as i">
-            <tr *ngFor="let question of category.questions; index as j">
-              <td class="id-column">{{ questionIdCounter + j }}</td>
-              <td>{{ category.name }}</td>
-              <td>{{ question }}</td>
-              <td class="action-column">
-                <button
-                  type="button"
-                  class="btn btn-danger"
-                  (click)="deleteQuestion(category.name, j)"
-                >
-                  Quitar
-                </button>
-              </td>
-            </tr>
-          </ng-container>
-        </tbody>
-      </table>
-      <button type="button" class="btn btn-success" (click)="saveCategories()">Guardar</button>
-
-    </div>
-
-    <!-- Add Question Modal -->
-    <div
-      class="modal fade"
-      id="addQuestionModal"
-      tabindex="-1"
-      aria-labelledby="addQuestionModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="addQuestionModalLabel">
-              Agregar pregunta
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Formulario de Evaluación</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<br>
+<div class="container1" *ngIf="showContainer1">
+  <div class="row">
+    <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
+      <div class="card bg-c-blue order-card" (click)="selectCurso(curso.curId)">
+        <div class="card-block">
+          <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
+          <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
+          </h2>
+          <div style="margin-bottom: 10px;">
+            <h3 class="val"><span class="f-right">{{curso.curFechainicio | date:
+                'dd/MM/yyyy'}}</span>Inicia</h3>
+            <h3 class="val"><span class="f-right">{{curso.curFechafin | date:
+                'dd/MM/yyyy'}}</span>Termina</h3>
           </div>
-          <div class="modal-body">
-            <form [formGroup]="addQuestionForm">
-              <input type="hidden" id="categoryNameInput" />
-              <div class="mb-3">
-                <label for="newQuestionInput" class="form-label">
-                  Pregunta
-                </label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="newQuestionInput"
-                  formControlName="newQuestionInput"
-                  placeholder="Escribe la pregunta aquí"
-                />
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancelar
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              (click)="onAddQuestionSubmit(selectedCategoryName)"
-            >
-              Añadir
-            </button>
+          <div style="margin-bottom: 10px;">
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</div>
+<div class="container" style="background-color: #ffffff;">
+  <div class="container2" *ngIf="showContainer2">
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Cursos</a></li>
+        <li class="breadcrumb-item"><a>Fichas Evaluación</a></li>
+      </ol>
+    </nav>
+    <!-- /Breadcrumb -->
+
+    <div class="row">
+      <div class="col-md-12 col-xl-12">
+        <div class="container" style="background-color: #ffffff;">
+          <h4>CREAR UNA FICHA DE EVALUACION</h4>
+
+          <body>
+            <div class="container">
+              <h1 class="mt-5">Preguntas para ficha de Evaluación</h1>
+
+              <form>
+                <div class="mb-3">
+                  <label for="pregunta" class="form-label">Agregar Categoría</label>
+                  <input [(ngModel)]="newCategory" name="newCategory" type="text" class="form-control" id="pregunta"
+                    placeholder="Escribe la categoría" />
+                </div>
+                <button type="submit" class="btn btn-primary" (click)="addCategory()">
+                  Añadir
+                </button>
+              </form>
+            </div>
+
+            <div class="container mt-3">
+              <h3 class="mt-5">Categorías</h3>
+              <table class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col">Categoría</th>
+                    <th scope="col" class="action-column">Acción</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let category of categories; index as i">
+                    <td>{{ category.name }}</td>
+                    <td class="action-column">
+                      <div class="d-flex">
+                        <button type="button" class="btn btn-primary me-2" data-bs-toggle="modal"
+                          data-bs-target="#addQuestionModal" (click)="addQuestion(category.name)">
+                          Agregar preguntas
+                        </button>
+                        <button type="button" class="btn btn-danger" (click)="deleteCategory(i, category.name)">
+                          Quitar
+                        </button>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <div class="container mt-3">
+              <h3 class="mt-5">Preguntas por Categorías</h3>
+              <table class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col" class="id-column">id_pregunta</th>
+                    <th scope="col">Categoría</th>
+                    <th scope="col">Pregunta</th>
+                    <th scope="col" class="action-column">Acción</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <ng-container *ngFor="let category of categories; index as i">
+                    <tr *ngFor="let question of category.questions; index as j">
+                      <td class="id-column">{{ questionIdCounter + j }}</td>
+                      <td>{{ category.name }}</td>
+                      <td>{{ question }}</td>
+                      <td class="action-column">
+                        <button type="button" class="btn btn-danger" (click)="deleteQuestion(category.name, j)">
+                          Quitar
+                        </button>
+                      </td>
+                    </tr>
+                  </ng-container>
+                </tbody>
+              </table>
+              <button type="button" class="btn btn-success" (click)="saveCategories()">Guardar</button>
+
+            </div>
+
+            <!-- Add Question Modal -->
+            <div class="modal fade" id="addQuestionModal" tabindex="-1" aria-labelledby="addQuestionModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="addQuestionModalLabel">
+                      Agregar pregunta
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form [formGroup]="addQuestionForm">
+                      <input type="hidden" id="categoryNameInput" />
+                      <div class="mb-3">
+                        <label for="newQuestionInput" class="form-label">
+                          Pregunta
+                        </label>
+                        <input type="text" class="form-control" id="newQuestionInput" formControlName="newQuestionInput"
+                          placeholder="Escribe la pregunta aquí" />
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                      Cancelar
+                    </button>
+                    <button type="button" class="btn btn-primary" (click)="onAddQuestionSubmit(selectedCategoryName)">
+                      Añadir
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </body>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </html>
