validaciones sup admin

--- a/src/app/modules/super-admin/edit-list-admins/pages/edit-list-admins/edit-list-admins.component.html
+++ b/src/app/modules/super-admin/edit-list-admins/pages/edit-list-admins/edit-list-admins.component.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="my-4">Lista Usuarios Activos</h1>
+      <h1 class="my-4">Lista de Administradores</h1>
       <div class="form-group">
         <label for="buscar">Buscar:</label>
         <input
@@ -130,6 +130,10 @@
               <div class="mb-3">
                 <label for="username" class="form-label">Usuario</label>
                 <input type="text" class="form-control" id="username" />
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="text" class="form-control" id="password" />
               </div>
             </form>
           </div>
