--- a/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
+++ b/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
@@ -1,59 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formulario de Profesor</title>
+    <!-- CSS de Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Formulario de Profesor</title>
-  <!-- CSS de Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
-</head>
-
-<body>
-  <div class="container mt-4">
-    <h2 class="mb-4">Formulario de Profesor</h2>
-    <form >
-      <div class="row">
-        <div class="col-md-6">
-          <label for="cedula" class="form-label">Cédula</label>
-          <div class="input-group">
-            <input type="search" id="cedula" name="cedula" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" [(ngModel)]="cedula" />
-            <button type="button" class="btn btn-outline-primary" (click)=" buscarPersona(cedula)">Buscar</button>
-          </div>
-          <label for="id_persona" class="form-label">Identificacion</label>
-          <div class="input-group">
-            <!-- <input type="search" id="id_persona" name="id_persona" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="button" class="btn btn-outline-primary" (click)="buscarPersona(id_persona)"|>Buscar</button> -->
-          </div>
-        </div>
-      </div>
-      <form class="row" *ngIf="persona">
-        <div class="col-md-6">
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="persona.nombre" disabled />
+  <body>
+    <div class="container mt-4">
+      <h2 class="mb-4">Formulario de Profesor</h2>
+      <form>
+        <div class="row">
+          <div class="col-md-6">
+            <label for="cedula" class="form-label">Cédula</label>
+            <div class="input-group">
+              <input
+                type="search"
+                id="cedula"
+                name="cedula"
+                class="form-control rounded"
+                placeholder="Search"
+                aria-label="Search"
+                aria-describedby="search-addon"
+                [(ngModel)]="cedula"
+              />
+              <button
+                type="button"
+                class="btn btn-outline-primary"
+                (click)="buscarPersona(cedula)"
+              >
+                Buscar
+              </button>
+            </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <label for="apellido" class="form-label">Apellido</label>
-          <input type="text" class="form-control" id="apellido" name="apellido" [(ngModel)]="persona.apellido"
-            disabled />
+        <form class="row" *ngIf="persona">
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input
+                type="text"
+                class="form-control"
+                id="nombre"
+                name="nombre"
+                [(ngModel)]="persona.nombre"
+                disabled
+              />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label for="apellido" class="form-label">Apellido</label>
+            <input
+              type="text"
+              class="form-control"
+              id="apellido"
+              name="apellido"
+              [(ngModel)]="persona.apellido"
+              disabled
+            />
+          </div>
+        </form>
+        <div class="mb-3">
+          <label for="usuario" class="form-label">Usuario</label>
+          <input
+            type="text"
+            class="form-control"
+            id="usuario"
+            name="username"
+            [(ngModel)]="usuario.username"
+          />
         </div>
+        <div class="mb-3">
+          <label for="contrasena" class="form-label">Contraseña</label>
+          <input
+            type="password"
+            class="form-control"
+            id="contrasena"
+            name="password"
+            [(ngModel)]="usuario.password"
+          />
+        </div>
+        <button (click)="onSubmit()" type="submit" class="btn btn-primary">
+          Enviar
+        </button>
       </form>
-      <div class="mb-3">
-        <label for="usuario" class="form-label">Usuario</label>
-        <input type="text" class="form-control" id="usuario" name="username" [(ngModel)]="usuario.username" />
-      </div>
-      <div class="mb-3">
-        <label for="contrasena" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="contrasena" name="password" [(ngModel)]="usuario.password" />
-      </div>
-      <button  (click)="onSubmit()" type="submit" class="btn btn-primary">Enviar</button>
-
-      <button  type="submit" class="btn btn-primary">buscarRol</button>
-      
-    </form>
-  </div>
-</body>
-
+    </div>
+  </body>
 </html>
